--- a/vanilla/v0/index.html
+++ b/vanilla/v0/index.html
@@ -128,18 +128,7 @@
       </form>
 
       <!-- CARD -->
-      <div class="app mt-5">
-        <div class="card text-white bg-dark mb-3" style="max-width: 20rem">
-          <div class="card-header">Header</div>
-          <div class="card-body">
-            <h4 class="card-title">Dark card title</h4>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-          </div>
-        </div>
-      </div>
+      <div class="app mt-5"></div>
     </main>
     <script type="module" src="./js/main.js"></script>
     <!-- <script
